# chairbot

./: .gitignore  base.dxf  chairbot.ino  chairbot.service  motion.conf  spacer.dxf  start  updatelcd
arm/: Makefile  arm.ino  arm.ino~
arm/beta/: endstopactivator.py  endstopbump.py  endstopmount.py  spacer.py
arm/gamma/: endstopactivator.py  endstopmount.py
arm/grblHAL/: settings.txt
cad/: ampmount.py  bootstick.py  drivermount.py  encodermount.py  nrfmount.py  pcbmount.py
cad/nerfgun/: base.py  bearing-inner.py  bearing-outer.py  bearingmount-bottom-r.py  bearingmount-bottom.py  bearingmount-top.py  bearingsupport.py  counterweight.py  slipringpcbmount.py  topbracket.py  xsteppermount.py
controller/: build.sh  build.sh~  controller  controller.cc  controller.cc~  controller.py  dummysixaxis.py  i2ctest.py  joytest.py  lcddriver.py  lowspeed  lowspeed.cc  lowspeed.cc~  sixaxis.py
ctrlr/: Makefile  main.cpp  motor.cpp  motor.h  radio.cpp  signal.cpp  signal.h
esp32/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig
esp32/components/: README  setuprf24.sh
esp32/components/libhelix-aac/: CMakeLists.txt  ConfigHelix.h  aaccommon.h  aacdec.c  aacdec.h  helix_memory.c  noiseless.c  sbr.c
esp32/components/libhelix-aac/utils/: helix_pgm.h
esp32/components/minimp3/: CMakeLists.txt  minimp3.h
esp32/components/speaker/: AudioSamples.h  CMakeLists.txt  I2SSpeaker.cpp  I2SSpeaker.h  MP3Decoder.cpp  MP3Decoder.h  MP3Player.cpp  MP3Player.h
esp32/components/usb_device_uac/: CMakeLists.txt  Kconfig  idf_component.yml  usb_device_uac.c
esp32/components/usb_device_uac/include/: usb_device_uac.h
esp32/components/usb_device_uac/tusb/: tusb_config.h  usb_descriptors.c
esp32/components/usb_device_uac/tusb_uac/: uac_config.h  uac_descriptors.h
esp32/main/: CMakeLists.txt  battery.cpp  battery.h  component.mk  config.h  console.cpp  i2s_audio.cpp  i2s_audio.h  main.cpp  motor.cpp  motor.h  nvs.cpp  nvs.h  peripherals.cpp  peripherals.h  protocol.h  radio.cpp  radio.h
html/: action.php  index.html  style.css
i2ctest/: i2ctest.ino
include/: i2c_cmd.h
leds/: leds.ino
motor/: Makefile  motor.ino  test.py
pcb/chairbot/: chairbot-cache.lib  chairbot.kicad_pcb  chairbot.kicad_prl  chairbot.kicad_pro  chairbot.kicad_sch  chairbot.net  chairbot.pro  chairbot.sch  fp-info-cache  fp-lib-table  motor.kicad_sch  motor.sch  sym-lib-table
pcb/chairbot/libs/: 74xx_IEEE.lib  Custom.kicad_sym  Device.kicad_sym  Mechanical.kicad_sym  chairbot.lib  esp32mini.lib  pca9515.dcm  pca9515.lib
pcb/chairbot/pretty/Custom.pretty/: J_SD_Card-micro_dual.kicad_mod  PCM5102A module.kicad_mod
pcb/chairbot/pretty/chairbot.pretty/: MP1584-module.kicad_mod  mini car fuse.kicad_mod  nRF24L01.kicad_mod  peakdetector.kicad_mod
pcb/peripherals/: fp-info-cache  fp-lib-table  peripherals-cache.lib  peripherals-rescue.lib  peripherals.kicad_pcb  peripherals.kicad_prl  peripherals.kicad_pro  peripherals.kicad_sch  peripherals.net  peripherals.pro  peripherals.sch  pwm.kicad_sch  pwm.sch  sym-lib-table
pcb/peripherals/libs/: buckconverter.lib  dfplayer.dcm  dfplayer.dcm~
pcb/peripherals/pretty/Capacitor_SMD.pretty/: C_01005_0402Metric.kicad_mod  C_0201_0603Metric.kicad_mod  C_0402_1005Metric.kicad_mod  C_0603_1608Metric_Pad1.05x0.95mm_HandSolder.kicad_mod  C_0805_2012Metric.kicad_mod  C_0805_2012Metric_Pad1.15x1.40mm_HandSolder.kicad_mod  C_1206_3216Metric.kicad_mod  C_1206_3216Metric_Pad1.42x1.75mm_HandSolder.kicad_mod  C_1210_3225Metric.kicad_mod  C_1210_3225Metric_Pad1.42x2.65mm_HandSolder.kicad_mod  C_1806_4516Metric.kicad_mod  C_1806_4516Metric_Pad1.57x1.80mm_HandSolder.kicad_mod  C_1812_4532Metric.kicad_mod  C_1812_4532Metric_Pad1.30x3.40mm_HandSolder.kicad_mod  C_1825_4564Metric.kicad_mod  C_1825_4564Metric_Pad1.88x6.70mm_HandSolder.kicad_mod  C_2010_5025Metric.kicad_mod  C_2010_5025Metric_Pad1.52x2.65mm_HandSolder.kicad_mod  C_2220_5650Metric.kicad_mod  C_2220_5650Metric_Pad1.97x5.40mm_HandSolder.kicad_mod  C_2225_5664Metric.kicad_mod  C_2225_5664Metric_Pad1.80x6.60mm_HandSolder.kicad_mod  C_2512_6332Metric.kicad_mod  C_2816_7142Metric.kicad_mod  (+4 more)
pcb/powerbar/: fp-info-cache  fp-lib-table  powerbar.kicad_pcb  powerbar.kicad_pcb-bak  powerbar.net  powerbar.pro  powerbar.sch  powerbar.sch-bak  sym-lib-table
pcb/powerbar/gerber/: powerbar-B_Cu.gbr  powerbar-B_Mask.gbr  powerbar-B_Paste.gbr  powerbar-B_SilkS.gbr  powerbar-Edge_Cuts.gbr  powerbar-F_Cu.gbr  powerbar-F_Mask.gbr  powerbar-F_Paste.gbr  powerbar-F_SilkS.gbr  powerbar.drl
peakdetector/: peakdetector-cache.lib  peakdetector.bak  peakdetector.kicad_pcb  peakdetector.kicad_pcb-bak  peakdetector.net  peakdetector.sch  sym-lib-table
peripherals/: Makefile  SerialMP3Player.cpp  SerialMP3Player.h  peripherals.ino
signals/: Makefile  signals.ino
udev-rules/: 99-usb-serial.rules
(+85 files in other folders)
