idf_component_register(SRCS
                       battery.cpp
                       checksum.cpp
                       console.cpp
                       main.cpp
                       motor.cpp
                       peripherals.cpp
                       radio.cpp
                       INCLUDE_DIRS ".")
